--- a/src/09-complex-application/tsconfig.json
+++ b/src/09-complex-application/tsconfig.json
@@ -4,7 +4,14 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
-    "target": "es5"
+    "target": "es5",
+    "lib": [
+      "es5",
+      "es2015",
+      "DOM",
+      "DOM.Iterable",
+      "ScriptHost"
+    ]
   },
   "include": [
     "./**/*"
