--- a/src/09-complex-application/package.json
+++ b/src/09-complex-application/package.json
@@ -16,5 +16,8 @@
     "typescript": "^2.9.2",
     "webpack": "^4.12.1",
     "webpack-command": "^0.3.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
