--- a/src/09-complex-application/package.json
+++ b/src/09-complex-application/package.json
@@ -12,12 +12,14 @@
   "private": true,
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
+    "handlebars-loader": "^1.7.0",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.9.2",
     "webpack": "^4.12.1",
     "webpack-command": "^0.3.0"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "handlebars": "^4.0.11"
   }
 }
