--- a/src/09-complex-application/tsconfig.json
+++ b/src/09-complex-application/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
     "lib": [
@@ -14,6 +14,6 @@
     ]
   },
   "include": [
-    "./**/*"
+    "./app/**/*"
   ]
 }
